Fix copypasta typo in documentation

--- a/dpkg-sort-versions.1
+++ b/dpkg-sort-versions.1
@@ -10,9 +10,9 @@ versions
 .IP
 .nf
 \f[C]
-dpkg-versions 1.0 1.0.1 1.0.1\[ti]foo
-dpkg-versions < list-of-versions.txt
-dpkg-versions -h
+dpkg-sort-versions 1.0 1.0.1 1.0.1\[ti]foo
+dpkg-sort-versions < list-of-versions.txt
+dpkg-sort-versions -h
 \f[R]
 .fi
 .SH Installation
